# bf

./: .gitignore  bf.cabal  flake.nix
app/: Interpreter.hs  Main.hs  Parser.hs
