cabal-version:      3.0

name:               bf
version:            0.0.0
synopsis:           Brainfuck compiler
category:           Language

license:            GPL-3.0-or-later
license-file:       LICENSE

author:             Clover "pyrotelekinetic" Ison
maintainer:         clover@isons.org
copyright:          (C) 2022, 2024  Clover "pyrotelekinetic" Ison <clover@isons.org>

extra-doc-files:    README.md

build-type:         Simple

executable bf
    hs-source-dirs:   app
    main-is:          Main.hs

    other-modules:
        Parser
        Interpreter

    -- Libraries are locked with 'cabal freeze' to the version provided by nix.
    build-depends:
        , base
        , text
        , megaparsec
    default-extensions:
        OverloadedStrings
        LambdaCase
    ghc-options:
        -threaded
        -Wall
        -Wno-unused-do-bind
        -Wno-name-shadowing

    default-language: GHC2021
